--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/multer": "^1.4.7",
     "change-case": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "fs-extra": "^11.1.1",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
