--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nest-cm-test1",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Watchara-Sueasakul",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,17 +21,23 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^10.0.0",
     "@types/multer": "^1.4.7",
+    "bcrypt": "^5.1.0",
     "change-case": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fs-extra": "^11.1.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
