--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "config": "^3.3.9",
     "fs-extra": "^11.1.1",
     "lodash": "^4.17.21",
+    "memfs": "^4.2.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -48,7 +49,8 @@
     "rxjs": "^7.2.0",
     "ts-node": "^10.0.0",
     "typeorm": "^0.3.16",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "yarn-upgrade-all": "^0.7.2"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
